--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <header class="bg-neutral-900/80 backdrop-blur-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#">
-                <img src="http://googleusercontent.com/file_content/1" alt="TranTech Solutions Logo" class="h-10 w-auto">
+                <img src="full_color_logo.png" alt="TranTech Solutions Logo" class="h-10 w-auto">
             </a>
             <div class="hidden md:flex items-center space-x-8">
                 <a href="#services" class="hover:text-primary-500 transition-colors">Services</a>
