--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
             );
 
             // IMPORTANT: Replace with your actual email address
-            const yourEmail = 'me@jonathanvutran.com';
+            const yourEmail = 'consult@trantech.solutions';
             
             window.location.href = `mailto:${yourEmail}?subject=${mailtoSubject}&body=${mailtoBody}`;
         });
