updated logo links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TranTech Solutions - Expert IT Consulting</title>
 
-    <link rel="icon" type="image/x-icon" href="images/Light Logo.svg">
+    <link rel="icon" type="image/x-icon" href="images/Light%20Logo.svg">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -75,7 +75,7 @@
     <!-- Header -->
     <header id="header" class="fixed top-0 left-0 right-0 z-50 bg-opacity-90 backdrop-blur-md transition-all duration-300 ease-in-out" style="background-color: rgba(10, 25, 47, 0.85);">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold gradient-text"><img src="https://raw.githubusercontent.com/trantechsolutions/trantech-landing-page/main/images/logo_long.svg" alt="TranTech Logo" class="h-10"></a>
+            <a href="#" class="text-2xl font-bold gradient-text"><img src="images/logo_long.svg" alt="TranTech Logo" class="h-10"></a>
             <div class="hidden md:flex items-center space-x-8">
                 <a href="#services" class="text-slate-300 hover:text-[#5271ff] transition-colors">Services</a>
                 <a href="#process" class="text-slate-300 hover:text-[#5271ff] transition-colors">Our Process</a>
@@ -117,7 +117,7 @@
                     </div>
                 </div>
                 <div class="hidden lg:flex justify-center items-center" data-aos="fade-left" data-aos-delay="200">
-                    <img src="https://raw.githubusercontent.com/trantechsolutions/trantech-landing-page/main/images/Full%20Color%20Logo.svg" alt="TranTech Animated Logo" class="w-full max-w-md animated-logo">
+                    <img src="images/Full%20Color%20Logo.svg" alt="TranTech Animated Logo" class="w-full max-w-md animated-logo">
                 </div>
             </div>
         </section>
