updated logo links

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     </div>
                     <div data-aos="fade-left" class="relative">
                         <div class="bg-slate-800 rounded-lg p-4">
-                            <img src="https://raw.githubusercontent.com/trantechsolutions/trantech-landing-page/main/images/Full%20Color%20Logo%20Only.svg" alt="TranTech Logo" class="rounded-lg w-full h-auto bg-[#112240]">
+                            <img src="images/Full%20Color%20Logo%20Only.svg" alt="TranTech Logo" class="rounded-lg w-full h-auto bg-[#112240]">
                         </div>
                         <div class="absolute -top-8 -left-8 w-32 h-32 bg-[#5271ff] rounded-full opacity-10 -z-10"></div>
                         <div class="absolute -bottom-8 -right-8 w-48 h-48 border-4 border-slate-700 rounded-lg -z-10"></div>
